# naemon-module-skel

./: .gitignore  AUTHORS  COPYING  INSTALL  Makefile.am  README.md  configure.ac  loadme.cfg  loadme.cfg.in  map-demo.sh  module.c  qh-connect.c
